--- a/project/src/index.css
+++ b/project/src/index.css
@@ -1,5 +1,18 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Open Sans, sans-serif;
+}
+
+h1 {
+  font-size: 28px;
+}
+
+hr {
+  background: #ddd;
+  color: #ddd;
+  width: 100%;
+  height: 1px;
+  border: none 0;
+  margin: 0 0 1.4em;
 }
